apps/canary-demo/canary-demo-lb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: canary-demo-lb
spec:
  selector:
    app: canary-demo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
